WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47993
Out of process plug-ins are never asked to initially paint
https://bugs.webkit.org/show_bug.cgi?id=47993
Summary
Out of process plug-ins are never asked to initially paint
Anders Carlsson
Reported
2010-10-20 10:36:54 PDT
Out of process plug-ins are never asked to initially paint
Attachments
Patch
(7.35 KB, patch)
2010-10-20 11:08 PDT
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-10-20 11:01:34 PDT
<
rdar://problem/8570342
>
Anders Carlsson
Comment 2
2010-10-20 11:08:59 PDT
Created
attachment 71311
[details]
Patch
Darin Adler
Comment 3
2010-10-20 11:34:56 PDT
Comment on
attachment 71311
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=71311&action=review
> WebKit2/PluginProcess/PluginControllerProxy.cpp:299 > + m_paintTimer.stop(); > + > + paint();
I could imagine putting the call to m_paintTimer.stop() inside paint(). At the moment, it’s OK to leave it outside like this. I think the blank line before paint doesn’t make much sense. I suggest grouping it all in one paragraph.
> WebKit2/WebProcess/Plugins/PluginProxy.cpp:120 > + m_connection->connection()->sendSync(Messages::PluginControllerProxy::PaintEntirePlugin(), > + Messages::PluginControllerProxy::PaintEntirePlugin::Reply(), > + m_pluginInstanceID, CoreIPC::Connection::NoTimeout);
I suggest not lining up subsequent lines with the opening parenthesis. It’s not easy to maintain when renaming things in the future, and also makes things take more lines than they otherwise would.
Anders Carlsson
Comment 4
2010-10-20 12:38:50 PDT
Committed
r70162
: <
http://trac.webkit.org/changeset/70162
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug