Out of process plug-ins are never asked to initially paint https://bugs.webkit.org/show_bug.cgi?id=47993 <rdar://problem/8570342>

Reviewed by Darin Adler.

* Platform/CoreIPC/HandleMessage.h:
(CoreIPC::callMemberFunction):
Add new callMemberFunction overload.

* PluginProcess/PluginControllerProxy.cpp:
(WebKit::PluginControllerProxy::paintEntirePlugin):
Set the dirty rect to be the entire plug-in rect and then paint the plug-in.

* PluginProcess/PluginControllerProxy.messages.in:
Add PaintEntirePlugin message.

* WebProcess/Plugins/PluginProxy.cpp:
(WebKit::PluginProxy::PluginProxy):
Initialize m_pluginBackingStoreContainsValidData to false.

(WebKit::PluginProxy::paint):
If m_pluginBackingStoreContainsValidData is false, synchronously ask the plug-in to paint,
then blit the plug-in backing store into our own backing store.

(WebKit::PluginProxy::geometryDidChange):
Set m_pluginBackingStoreContainsValidData to false.

(WebKit::PluginProxy::update):
Set m_pluginBackingStoreContainsValidData to true if the plug-in has painted its entire area.

Canonical link: https://commits.webkit.org/60713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70162 268f45cc-cd09-0410-ab3c-d52691b4dbfc