WebKit2/PluginProcess/PluginControllerProxy.cpp
@@ -86,6 +86,7 @@ void PluginControllerProxy::destroy()
 void PluginControllerProxy::paint()
 {
     ASSERT(!m_dirtyRect.isEmpty());
+    m_paintTimer.stop();
 
     if (!m_backingStore)
         return;
@@ -289,6 +290,12 @@ void PluginControllerProxy::handleMouseLeaveEvent(const WebMouseEvent& mouseLeav
 void PluginControllerProxy::handleKeyboardEvent(const WebKeyboardEvent& keyboardEvent, bool& handled)
 {
     handled = m_plugin->handleKeyboardEvent(keyboardEvent);
+}
+
+void PluginControllerProxy::paintEntirePlugin()
+{
+    m_dirtyRect = m_frameRect;
+    paint();
 }
 
 void PluginControllerProxy::setFocus(bool hasFocus)
